# MobileWallet

./: LICENSE  README.md
OBPClient/: README.md  customer.json  (+1 more)
SecureKernel/: .gitignore  CMakeLists.txt
SecureKernel/ext/mbedtls-3.4.0/include/mbedtls/: mbedtls_config.h
SecureKernel/inc/: sk_definitions.hpp
SecureKernel/include/: sk.h
SecureKernel/sk_app/: openapi.yaml
SecureKernel/sk_app/sk_app_android/: settings.gradle.kts  sk_app.jks  sk_consts.py  sk_consts.sh
SecureKernel/sk_app/sk_app_android/app/: build.gradle.kts  proguard-rules.pro
SecureKernel/sk_app/sk_app_android/app/src/androidTest/java/com/example/sk_app/: ExampleInstrumentedTest.kt
SecureKernel/sk_app/sk_app_android/app/src/main/: AndroidManifest.xml
SecureKernel/sk_app/sk_app_android/app/src/main/cpp/: CMakeLists.txt  ext  include  sk_app.cpp
SecureKernel/sk_app/sk_app_android/app/src/main/java/com/example/sk_app/: MainActivity.kt  SKConsts.kt
SecureKernel/sk_app/sk_app_android/app/src/main/res/layout/: activity_main.xml
SecureKernel/sk_app/sk_app_android/app/src/main/res/values/: strings.xml  themes.xml
SecureKernel/sk_app/sk_app_android/gradle/wrapper/: gradle-wrapper.properties
SecureKernel/sk_app/sk_app_ios/: build_sk_lib.sh  build_sk_xcf.sh  gen_ios.sh  sk_consts.py  sk_consts.sh
SecureKernel/sk_app/sk_app_ios/sk_app/: .gitignore  Podfile
SecureKernel/sk_app/sk_app_ios/sk_app/sk/: CMakeLists.txt  sk.cpp  sk.hpp  sk_lib-Bridging-Header.h  wrapper.h  wrapper.mm
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app/: ContentView.swift  sk_appApp.swift  sk_app_errors.swift  sk_client.swift  sk_const_command.swift  sk_const_error.swift  sk_const_state.swift  sk_interface.swift  sk_json_loader.swift
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app.xcodeproj/: project.pbxproj
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app.xcodeproj/project.xcworkspace/xcuserdata/main.xcuserdatad/: UserInterfaceState.xcuserstate
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app.xcodeproj/xcuserdata/main.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app.xcodeproj/xcuserdata/main.xcuserdatad/xcschemes/: xcschememanagement.plist
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app.xcworkspace/: contents.xcworkspacedata
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app.xcworkspace/xcuserdata/main.xcuserdatad/: UserInterfaceState.xcuserstate
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app.xcworkspace/xcuserdata/main.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SecureKernel/sk_app/sk_app_ios/sk_app/sk_appTests/: sk_appTests.swift
SecureKernel/sk_app/sk_app_ios/sk_app/sk_appUITests/: sk_appUITests.swift  sk_appUITestsLaunchTests.swift
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app_swagger_client/: SwaggerClient.podspec
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app_swagger_client/SwaggerClient/Classes/Swaggers/APIs/: DefaultAPI.swift
SecureKernel/sk_app/sk_app_ios/sk_app/sk_app_swagger_client/SwaggerClient/Classes/Swaggers/Models/: BalanceInitData.swift  OnlineTransactionData.swift  ProcessingData.swift  ProvisioningData.swift  RequestSessionData.swift  SessionDataType.swift
SecureKernel/sk_app/sk_app_ios/sk_app/sk_lib/sk_lib/: sk_lib.h
SecureKernel/sk_app/sk_app_ios/sk_app/sk_lib/sk_lib.xcodeproj/: project.pbxproj
SecureKernel/sk_app/sk_app_ios/sk_app/sk_lib/sk_lib.xcodeproj/project.xcworkspace/xcuserdata/main.xcuserdatad/: UserInterfaceState.xcuserstate
SecureKernel/sk_app/sk_app_ios/sk_app/sk_lib/sk_lib.xcodeproj/xcuserdata/main.xcuserdatad/xcschemes/: xcschememanagement.plist
SecureKernel/sk_plugin/: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml  sk_plugin_consts.py  sk_plugin_consts.sh
SecureKernel/sk_plugin/android/: build.gradle  settings.gradle
SecureKernel/sk_plugin/android/src/main/: AndroidManifest.xml
SecureKernel/sk_plugin/example/: README.md  pubspec.yaml
SecureKernel/sk_plugin/example/android/app/: build.gradle
SecureKernel/sk_plugin/example/android/app/src/main/: AndroidManifest.xml
SecureKernel/sk_plugin/example/ios/Runner/: Info.plist
SecureKernel/sk_plugin/example/ios/Runner.xcodeproj/: project.pbxproj
SecureKernel/sk_plugin/example/lib/: main.dart
SecureKernel/sk_plugin/ios/: sk_plugin.podspec
SecureKernel/sk_plugin/ios/Classes/: sk_plugin.c
SecureKernel/sk_plugin/lib/: sk_plugin.dart  sk_plugin_api.dart  sk_plugin_bindings_generated.dart
SecureKernel/sk_plugin/src/: CMakeLists.txt
SecureKernel/src/: sk_app_key_store.cpp  sk_app_key_store_sim.cpp  sk_binary_buffer.cpp  sk_context.cpp  sk_crypto_mbedtls.cpp  sk_persistence.cpp  sk_random.cpp  sk_secure_store.cpp  sk_session.cpp  sk_session_offline.cpp  sk_session_offline_payee.cpp  sk_session_offline_payor.cpp  sk_session_online.cpp  sk_session_provision.cpp  sk_store_mgr_generic.cpp  sk_transaction_list.cpp  sk_utils.cpp  sk_utils_platform_android.cpp  sk_utils_platform_ios.cpp  sk_utils_platform_ux.cpp  sk_x509.cpp
SecureKernel/src/inc/: sk_app_key_store.hpp  sk_app_key_store_sim.hpp  sk_binary_buffer.hpp  sk_crypto.hpp  sk_crypto_mbedtls.hpp  sk_persistence.hpp  sk_random.hpp  sk_secure_store.hpp  sk_session.hpp  sk_session_offline.hpp  sk_session_offline_payee.hpp  sk_session_offline_payor.hpp  sk_session_online.hpp  sk_session_provision.hpp  sk_store_mgr.hpp  sk_store_mgr_generic.hpp  sk_transaction_list.hpp  sk_utils.hpp  sk_utils_platform.hpp  sk_x509.hpp
SecureKernel/test/: skt_app_key_store_aes.cpp  skt_app_key_store_ecdsa.cpp  skt_crypto_aes.cpp  skt_crypto_ecdh.cpp  skt_crypto_ecdsa.cpp  skt_crypto_unwrap_aes.cpp  skt_crypto_unwrap_ecdsa.cpp  skt_persistence_data.cpp  skt_persistence_key.cpp  skt_persistence_list.cpp  skt_random.cpp  skt_secure_store.cpp  skt_session_offline.cpp  skt_session_online.cpp  skt_session_provision.cpp  skt_transaction_list.cpp  skt_utils.cpp  skt_utils.hpp  skt_x509.cpp
SecureKernel/utils/: dumpcert.sh  sk_certificates.py  sk_cmd_utils.py  sk_definitions.py
SecureKernel/wrapper/: sk_balance.py  sk_client.py  sk_main.py  sk_online.py  sk_provision.py  sk_transaction.py  sk_utils.py  sk_wrapper.cfg  sk_wrapper.py
(+101 files in other folders)
